--- a/shop/css/templatemo-main.css
+++ b/shop/css/templatemo-main.css
@@ -284,6 +284,7 @@ h4, .h4 {
   margin-top: 0px;
   font-size: 19px;
   font-weight: 600;
+  color: #000;
 }
 
 .projects-content .item .text-content span {
