--- a/shop/css/hero-slider.css
+++ b/shop/css/hero-slider.css
@@ -38,16 +38,16 @@ img {
 
 
 .product .primary-button-buy{
-  display: inline-block;
-  background-color: #ff7d27;
-  padding: 10px 20px;
-  border-radius: 3px;
-  text-transform: uppercase;
-  font-size: 11px;
-  color: #fff;
-  font-weight: 700;
-  text-decoration: none;
-  letter-spacing: 0.5px;
+  display: inline-block!important;
+  background-color: #ff7d27!important;
+  padding: 10px 20px!important;
+  border-radius: 3px!important;
+  text-transform: uppercase!important;
+  font-size: 11px!important;
+  color: #fff!important;
+  font-weight: 700!important;
+  text-decoration: none!important;
+  letter-spacing: 0.5px!important;
 }
 
 .product .primary-button-buy a{
@@ -56,6 +56,12 @@ img {
 }
 .product .primary-button-buy a:hover{
   color: unset!important;
+}
+
+.prod span{
+  color: #000;
+  font-size: 18px;
+  font-weight: 500;
 }
 
 
