--- a/shop/css/owl-carousel.css
+++ b/shop/css/owl-carousel.css
@@ -4,7 +4,7 @@
  */
 
 /* clearfix */
-.owl-carousel .owl-wrapper:after {
+. .owl-wrapper:after {
   content: ".";
   display: block;
   clear: both;
@@ -13,23 +13,23 @@
   height: 0;
 }
 /* display none until init */
-.owl-carousel{
+.{
   display: none;
   position: relative;
   width: 100%;
   -ms-touch-action: pan-y;
 }
-.owl-carousel .owl-wrapper{
+. .owl-wrapper{
   display: none;
   position: relative;
   -webkit-transform: translate3d(0px, 0px, 0px);
 }
-.owl-carousel .owl-wrapper-outer{
+. .owl-wrapper-outer{
   overflow: hidden;
   position: relative;
   width: 100%;
 }
-.owl-carousel .owl-wrapper-outer.autoHeight{
+. .owl-wrapper-outer.autoHeight{
   -webkit-transition: height 500ms ease-in-out;
   -moz-transition: height 500ms ease-in-out;
   -ms-transition: height 500ms ease-in-out;
@@ -37,7 +37,7 @@
   transition: height 500ms ease-in-out;
 }
   
-.owl-carousel .owl-item{
+. .owl-item{
   float: left;
 }
 
