--- a/shop/css/owl-carousel.css
+++ b/shop/css/owl-carousel.css
@@ -4,7 +4,7 @@
  */
 
 /* clearfix */
-. .owl-wrapper:after {
+.owl-carousel .owl-wrapper:after {
   content: ".";
   display: block;
   clear: both;
@@ -13,23 +13,23 @@
   height: 0;
 }
 /* display none until init */
-.{
+.owl-carousel{
   display: none;
   position: relative;
   width: 100%;
   -ms-touch-action: pan-y;
 }
-. .owl-wrapper{
+.owl-carousel .owl-wrapper{
   display: none;
   position: relative;
   -webkit-transform: translate3d(0px, 0px, 0px);
 }
-. .owl-wrapper-outer{
+.owl-carousel .owl-wrapper-outer{
   overflow: hidden;
   position: relative;
   width: 100%;
 }
-. .owl-wrapper-outer.autoHeight{
+.owl-carousel .owl-wrapper-outer.autoHeight{
   -webkit-transition: height 500ms ease-in-out;
   -moz-transition: height 500ms ease-in-out;
   -ms-transition: height 500ms ease-in-out;
@@ -37,11 +37,12 @@
   transition: height 500ms ease-in-out;
 }
   
-. .owl-item{
+.owl-carousel .owl-item{
   float: left;
 }
 
 .owl-controls {
+  margin-bottom: 25px;
   @media (max-width: @screen-sm-max) {
     top: -120px;
   }
