--- a/CSS/home.css
+++ b/CSS/home.css
@@ -9,6 +9,13 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-position: center center;  
+    /* background-size: auto; */
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
 
 }
 
