--- a/shop/css/templatemo-main.css
+++ b/shop/css/templatemo-main.css
@@ -156,15 +156,26 @@ a:hover { color: #FF0; }
 }
 
 .product-heading{
- 
+  display:flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .product-heading p{
-  font-size: 3em;
-  color: #fff;
+  font-size: 2.5em;
+  color: #000;
   margin: 0px auto 40px auto;
   text-align: center;
+  line-height: 1em;
   z-index: 1;
+  text-transform:uppercase;
+  font-weight: 700;
+  padding:10px 15px;
+  border:4px solid rgb(250, 1, 97);
+}
+
+.two p{
+  border:4px solid rgb(31, 247, 193)!important;
 }
 
 
@@ -273,7 +284,8 @@ h4, .h4 {
 
 .projects-content {
   padding-top: 20vh;
-  background-image: url(../img/section-3.jpg);
+  /* background-image: url(../img/section-3.jpg);
+  background-attachment: fixed; */
   /* background-color: rgb(214, 214, 214); */
 }
 
@@ -306,7 +318,7 @@ h4, .h4 {
 
 .projects-content-two {
   padding-top: 20vh;
-  background-image: url(../img/section-4.jpg);
+  /* background-image: url(../img/section-4.jpg); */
 }
 
 .projects-content-two .item img {
@@ -352,7 +364,7 @@ h4, .h4 {
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px;
-  background: #fff;
+  background: rgb(122, 122, 122);
 }
 
 
