--- a/shop/css/templatemo-main.css
+++ b/shop/css/templatemo-main.css
@@ -214,9 +214,9 @@ a:hover { color: #FF0; }
   background: transparent;
 }
 .fixed-side-navbar:hover .nav > li > a > span {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(255, 255, 255, 0.5);
   display: block;
-  background-color: #fff;
+  background-color: rgb(0, 0, 0);
   text-align: center;
   text-transform: uppercase;
   font-size: 12px;
@@ -225,7 +225,7 @@ a:hover { color: #FF0; }
 }
 .fixed-side-navbar .nav > li a.active {
   background-color: transparent;
-  color: black;
+  color: rgb(255, 255, 255);
 }
 .fixed-side-navbar .nav > li a.active:after {
   -webkit-transform: scale(0.9);
@@ -240,7 +240,7 @@ a:hover { color: #FF0; }
   width: 16px;
   height: 16px;
   background: transparent;
-  border: 2px solid #fff;
+  border: 2px solid rgb(0, 0, 0);
   border-radius: 10px;
 }
 .nav>li {
@@ -248,7 +248,7 @@ a:hover { color: #FF0; }
   display: block;
 }
 .fixed-side-navbar .nav > li a {
-  color: #fff;
+  color: rgb(0, 0, 0);
   min-height: 32px;
   background: transparent;
   padding: 5px 45px 5px 25px;
@@ -278,11 +278,11 @@ a:hover { color: #FF0; }
   background-color: transparent;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
-  border-color: black;
+  border-color: rgb(255, 255, 255);
   boder-right: 0;
 }
 .fixed-side-navbar .nav > li a:hover > span {
-  color: black;
+  color: rgb(255, 255, 255);
   display: block;
 }
 
@@ -335,6 +335,12 @@ a:hover { color: #FF0; }
 .two p{
   border:4px solid rgb(31, 247, 193)!important;
 }
+
+
+.three p{
+  border:4px solid rgb(136, 255, 0)!important;
+}
+
 
 
 
