--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -68,7 +68,7 @@
 }
 
 .mail{
-       
+     padding: 20px 0 0 0; 
 }
 
 
@@ -109,6 +109,10 @@
         padding: 10px;
     
     }
+    
+.mail{
+    padding: 0px 0 0 0; 
+}
 
 }
 
