--- a/shop/css/templatemo-main.css
+++ b/shop/css/templatemo-main.css
@@ -2,6 +2,55 @@ nav{
   display: none;
 }
 
+.navbar{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, .2);
+  z-index: 10;
+  transition: .3s ease-in-out 0s;
+  font-size: 16px;
+}
+
+.black{
+  background-color: rgba(0, 0, 0, 1);
+  color: #fff;
+  transition: .3s ease-in-out 0s;
+  font-size: 14px;
+  padding: 0;
+}
+
+.logo{
+ margin-left: 20px;
+}
+
+.logo img{
+  height: 70px;
+}
+
+.navbar ul{
+  display: flex;
+  list-style: none;
+  margin: 0;
+}
+
+.navbar ul li {
+  margin: 0 10px;
+
+}
+
+.navbar ul li a{
+  text-decoration: none;
+  color: rgb(231, 231, 231);
+}
+
+.navbar ul li a:hover{
+  color: #ebebeb;
+}
+
 .sponsor-img{
   height: 395px;
 }
@@ -461,8 +510,8 @@ h4, .h4 {
 
 .projects-content {
   padding-top: 10vh;
-  /* background-image: url(../img/section-3.jpg);
-  background-attachment: fixed; */
+  /* background-image: url(../img/section-3.jpg); */
+  /* background-attachment: fixed; */
   /* background-color: rgb(214, 214, 214); */
 }
 
@@ -617,7 +666,7 @@ section {
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 16vh;
-  background-image: url();
+  background-image: url(../../IMAGES/242.jpg);
 
 
 }
