--- a/shop/css/templatemo-main.css
+++ b/shop/css/templatemo-main.css
@@ -376,6 +376,7 @@ text-decoration: none; }
   display:flex;
   align-items: center;
   justify-content: center;
+  padding-top: 50px;
 }
 
 .product-heading p{
@@ -397,7 +398,7 @@ text-decoration: none; }
 
 
 .three p{
-  border:4px solid rgb(136, 255, 0)!important;
+  border:4px solid rgb(0, 0, 0)!important;
 }
 
 
