--- a/shop/css/templatemo-main.css
+++ b/shop/css/templatemo-main.css
@@ -544,7 +544,7 @@ h4, .h4 {
 }
 
 .projects-content-two {
-  padding-top: 20vh;
+  /* padding-top: 20vh; */
   /* background-image: url(../img/section-4.jpg); */
 }
 
