--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -5,7 +5,7 @@
     justify-content: center;
     text-align: center;
     top: 0;
-    min-height: 100vh;
+    min-height: 90vh;
 }
 
 .contact-heading{
@@ -15,7 +15,7 @@
     justify-content: space-between;
     text-align: center;
     font-size: 30px;
-    margin: 100px 10px 0 10px;
+    margin: 40px 10px 0 10px;
     padding: 0px 10px;
     border-bottom: 1px solid pink;
     font-weight: 700;
@@ -73,6 +73,11 @@
 }
 
 .footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 10vh;
+    margin-bottom: 0;
     text-align: center;
 }
 
@@ -82,10 +87,12 @@
    
     #contact{
          min-height: 100vh;
+
     }
 
     .contact-heading{
         font-size: 25px;
+        margin: 30px 10px 0 10px;
     }
     
     .contact-heading img{
@@ -109,9 +116,7 @@
     }
 
     .footer{
-        text-align: center;
         font-size: 10px;
-        margin: 5px auto 15px auto;
         padding: 10px;
     
     }
@@ -127,18 +132,12 @@
 @media screen and (max-width:360px){
     .contact-heading{
         font-size: 15px;
+        margin: 60px 10px 0 10px;
     }
     .footer{
         font-size: 10px;
-        margin: 0px auto 15px auto;
         padding: 10px;
     
     }
     
-}
-
-@media screen and (max-width:340px){
-    .footer{
-        margin: 0px auto 15px auto;
-    }
 }
