--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -127,7 +127,11 @@
 
 }
 
-
+@media screen and (max-width:450px){
+    #contact{
+        min-height: 80vh;
+    }
+}
 
 @media screen and (max-width:360px){
     .contact-heading{
