--- a/CSS/body.css
+++ b/CSS/body.css
@@ -11,6 +11,13 @@ body{
     font-family: 'Montserrat', sans-serif; 
     /* overflow-x: hidden!important; */
     overflow: hidden;
+
+
+      -webkit-user-select: none;
+         -moz-user-select: -moz-none;
+          -ms-user-select: none;
+              user-select: none;
+  
   }
 
 .container{
