--- a/CSS/about.css
+++ b/CSS/about.css
@@ -30,18 +30,16 @@
 }
 
 .about .about-heading {
-    font-size: 30px;
-    font-weight: 700;
     margin: 25px auto;
-    padding: 10px;
-    border-bottom: 1px solid pink;
-    width: 30%;
     text-align: center;
+    font-size: 35px;
+    color: rgb(23, 63, 53);
+    font-weight: 600;
     
 }
 
 .about .about-content{
-    padding: 15px;
+    padding: 10px;
     font-size: 16px;
     font-weight: 500;
     text-align: center;
@@ -94,7 +92,7 @@
         font-size: 25px;
         margin: 25px auto;
         padding: 10px;
-        border-bottom: 1px solid pink;
+
         width: 50%;
         text-align: center;
         
