--- a/CSS/shop.css
+++ b/CSS/shop.css
@@ -195,7 +195,7 @@
       font-size: 20px;
       margin: 25px auto;
       padding: 10px;
-      border-bottom: 1px solid pink;
+      /* border-bottom: 1px solid pink; */
       width: 95%;
       text-align: center;
       
