--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -262,6 +262,12 @@
     transform: rotate(45deg) translate(-5px,-6px);
 }
 
+@media screen and (max-width:430px){
+.navbar{
+    height: 10vh;
+}
+}
+
 
 
 
