--- a/CSS/home.css
+++ b/CSS/home.css
@@ -5,7 +5,7 @@
     justify-content: center;
     text-align: center;
     top: 0;
-    background-image: url(../IMAGES/HOME/Asset\ 4.png);
+    background-image: url(../IMAGES/HOME/Asset\ 4.webp);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
