--- a/CSS/home.css
+++ b/CSS/home.css
@@ -32,6 +32,6 @@
 
 @media screen and (max-width: 550px){
     #home{
-        background-image: url(../IMAGES/HOME/Asset\ 2.png);
+        background-image: url(../IMAGES/HOME/Asset\ 2.webp);
     }
 }
