--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -18,34 +18,58 @@
 .dropdown{
 
 }
+.dropdown-arrow{
+    height: .8em;
+    padding: 0 0 0 5px;
+}
+
+.dropbtn {
+    background-color:rgba(0, 0, 0, 0);
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+  
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    padding: 15px 0;
+    font-size: 14px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+   /* z-index: 99; */
+}
+  
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+  
+.dropdown-content a:hover {background-color: #ddd;}
+  
+.dropdown:hover .dropdown-content {display: block;}
+  
+/* .dropdown:hover .dropbtn {background-color: #3e8e41;} */
+
+/* .animate-nav{
+    font-size: 14px;
+    height: 10vh;
+} */
 
 .navbar-active{
     color: yellow!important;
 }
-
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    /* height: 20px; */
-    padding: 15px 0;
-    font-size: 14px;
-    /* background-color: #f9f9f9; */
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-/* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
-    background-color: #ddd;
-  }
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-
 
 
 
@@ -127,10 +151,43 @@
     padding: 10px 30px;
 }
 
+.unset-values{
+    padding: unset!important;
+    margin: unset!important;
+    z-index: 99!important;
+}
+
+.unset-values a{
+    color: #000!important;
+    font-size: .8em!important;
+}
+/* .accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+  }
+  
+  .active, .accordion:hover {
+    background-color: #ccc; 
+  }
+  
+  .panel {
+    padding: 0 18px;
+    display: none;
+    background-color: white;
+    overflow: hidden;
+  } */
+
 .navbar ul li{
     padding: 10px;
     margin: 5px;
-   
 }
 
 
@@ -171,7 +228,28 @@
     body{
         overflow-x: hidden;
     }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 100%;
+        padding: 10px 0;
+        font-size: 14px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+       z-index: 99;
+    }
+    .dropdown-content a {
+        color: black;
+        padding: 10px 0;
+        text-decoration: none;
+        display: block;
+    }
     
+    .animate-nav{
+        font-size: unset;
+        height: unset;
+    }
 
     .logo{
    
