--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -1,3 +1,9 @@
+
+/* .modal-recruit-data{
+   height: 60%!important;
+   width: 80%!important;
+} */
+
 .modal-bg{
     position: fixed;
     width: 100%;
@@ -11,30 +17,42 @@
     visibility: hidden;
     opacity: 0;
     transition: visibility 0s, opacity 0.5s;
+    z-index: 1000;
+}
+.apply-now{
+    height: 70%;
+    width: 100%;
 }
 
 .bg-active{
     visibility: visible;
     opacity: 1;
+    z-index: 1000;
+}
+.laptop{
+    height: 100%;
+    width: 100%;
 }
 
 .modal{
     position: relative;
     background-color: white;
-    width: 70%;
-    height: 60%;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    z-index: 1000;
 }
 
 .modal-form{
-    height: 75%;
+    height: 100%;
+    width: 100%;
 }
 
 .modal-product{
-    height: 75%;
+    height: 100%;
 }
 
 
@@ -105,11 +123,11 @@
         margin: 10px 0;
     }
     .modal-product{
-        height:70%;
+        height:100%;
         width: 100%;
     }
     .modal-form{
-        height:70%;
+        height:100%;
         width: 100%;
     }
     .laptop{
