--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -190,6 +190,11 @@
     .proceed-btn{
         margin: 5px 0px 0 0;
     }
+    .faq-pdf{
+        height: 70%;
+        width: 90%;
+    }
+    
 
 }
 
