--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -41,7 +41,7 @@
 
 .modal{
     position: relative;
-    background-color: white;
+    background-color: rgb(245, 245, 245);
     width: 100%;
     height: 100%;
     display: flex;
