--- a/CSS/app.css
+++ b/CSS/app.css
@@ -7,6 +7,7 @@
 @import './cars.css';
 @import './cars-update.css';
 @import './contact.css';
+@import './gototop.css';
 @import './home.css';
 @import './imageslide.css';
 @import './joinus.css';
@@ -18,6 +19,7 @@
 @import './sponsors.css';
 @import './team-update.css';
 @import './team.css';
+
 
 *{
     padding: 0;
