--- a/links/style.css
+++ b/links/style.css
@@ -1,7 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+body{
+    font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite; */
+}
+
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+.logo img{
+    height: 4em;
+    margin: 1em;
+}
+
+.container{
+    min-height: 70vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .link-buttons{
@@ -9,9 +46,43 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    min-height: 100vh;
+    
 }
 
-.link-buttons button{
+.button{
     margin: 1em;
+    padding: 1em;
+    border: 1px solid black;
+    outline: none;
+    border-radius: 30px;
+    transition: .2s ease-in-out 0s;
+    background-color: #1abc9c; 
+    color: #fff; 
+}
+
+.button:hover{
+    background-color: rgb(224, 224, 224);
+    color: #000;
+    cursor: pointer;
+    border-radius: 0px;
+}
+
+.socialbox ul{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+
+.socialbox ul li{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: rgb(255, 255, 255);
+}
+
+.ball {
+    position: absolute;
+    border-radius: 100%;
+    opacity: 0.7;
 }
