--- a/links/style.css
+++ b/links/style.css
@@ -8,7 +8,7 @@
 
 body{
     font-family: 'Roboto', sans-serif;
-    height: 100vh;
+    max-height: 100vh;
     overflow-x: hidden;
     overflow-y: hidden;
     /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
@@ -83,7 +83,7 @@ body{
 }
 
 .ball {
-    position: absolute;
+    position: fixed;
     border-radius: 100%;
     opacity: 0.7;
 }
