--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -19,6 +19,7 @@
     padding: 0px 10px;
     border-bottom: 1px solid pink;
     font-weight: 700;
+    color: rgb(23, 63, 53);
 }
 
 .contact-heading img{
@@ -59,6 +60,7 @@
 .socialbox1{
     font-size: 18px;
     line-height: 1.5em;
+    color: rgb(23, 63, 53);
 }
 
 .footer{
@@ -70,6 +72,7 @@
 
 .mail{
      padding: 20px 0 0 0; 
+     color: rgb(23, 63, 53);
 }
 
 .footer{
@@ -79,6 +82,7 @@
     height: 10vh;
     margin-bottom: 0;
     text-align: center;
+    color: rgb(23, 63, 53);
 }
 
 
