--- a/CSS/careers.css
+++ b/CSS/careers.css
@@ -80,9 +80,7 @@
     width: 200px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     overflow: hidden;
-    background-color: white;
-    
-    
+    background-color: #fff;
     background-size: cover;
 }
 
