--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -19,7 +19,7 @@
     padding: 0px 10px;
     border-bottom: 1px solid pink;
     font-weight: 700;
-    color: rgb(23, 63, 53);
+    /* color: rgb(23, 63, 53); */
 }
 
 .contact-heading img{
@@ -60,7 +60,7 @@
 .socialbox1{
     font-size: 18px;
     line-height: 1.5em;
-    color: rgb(23, 63, 53);
+    /* color: rgb(23, 63, 53); */
 }
 
 .footer{
@@ -72,7 +72,7 @@
 
 .mail{
      padding: 20px 0 0 0; 
-     color: rgb(23, 63, 53);
+     /* color: rgb(23, 63, 53); */
 }
 
 .footer{
