--- a/CSS/shop.css
+++ b/CSS/shop.css
@@ -11,6 +11,7 @@
     /* background-attachment: fixed; */
     min-height: 100vh;
   overflow-x: hidden;
+
 }
 
 .shop-box{
@@ -42,7 +43,7 @@
   /* border-bottom: 1px solid pink; */
   width: 80%;
   text-align: left;
-  color: rgb(23, 63, 53);
+  /* color: rgb(23, 63, 53); */
   font-weight: 600;
   
   
@@ -59,7 +60,7 @@
   text-align: left;
   margin: 0px 0 0 60px;
   line-height: 1.5em;
-  color: rgb(23, 63, 53);
+  /* color: rgb(23, 63, 53); */
 }
 
 .shop-box2{
