--- a/CSS/team-update.css
+++ b/CSS/team-update.css
@@ -29,7 +29,7 @@
 
 .team-heading-box .team-heading p{
     font-size: 35px;
-    color: rgb(23, 63, 53);
+
     font-weight: 600;
 }
 
@@ -83,7 +83,6 @@
     
     .team-heading-box .team-heading p{
         font-size: 30px;
-        color: rgb(23, 63, 53);
         font-weight: 600;
     }
     
@@ -114,6 +113,11 @@
     }
     .team-heading-box{
         margin-top: 50px;
+    }
+    .team-heading-box .team-heading .info-team p{
+        margin-left: unset;
+        margin: 30px;
+        text-align: left;
     }
 }
 
