--- a/CSS/team.css
+++ b/CSS/team.css
@@ -20,7 +20,7 @@
     border-radius: 10px;
     margin: 20px 20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    background-color: white;
+    /* background-color: #fff; */
     background-image: url(../IMAGES/HOME/Gears.svg);
     background-repeat: no-repeat;
     transition: 0.3s ease-in-out 0s;
@@ -103,7 +103,7 @@
     width: 175px;
     margin: 30px 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    background-color: white;
+
     background-image: url(../IMAGES/HOME/Gears.svg);
     background-repeat: no-repeat;
     transition: 0.3s ease-in-out 0s;
@@ -190,7 +190,7 @@
     width: 150px;
     margin: 30px 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    background-color: white;
+
     background-image: url(../IMAGES/HOME/Gears.svg);
     background-repeat: no-repeat;
     transition: 0.3s ease-in-out 0s;
@@ -276,7 +276,7 @@
     width: 200px;
     margin: 20px 20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    background-color: white;
+
     background-image: url(../IMAGES/HOME/Gears.svg);
     background-repeat: no-repeat;
     transition: 0.3s ease-in-out 0s;
