--- a/CSS/team.css
+++ b/CSS/team.css
@@ -12,6 +12,11 @@
     overflow-x: hidden;
 }
 
+.member-card{
+    background-color: #ffffff;
+    background-image: url(../IMAGES/HOME/Gears.svg);
+    background-repeat: no-repeat;
+}
 
 
 .team-box .member-card{
@@ -20,9 +25,7 @@
     border-radius: 10px;
     margin: 20px 20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    /* background-color: #fff; */
-    background-image: url(../IMAGES/HOME/Gears.svg);
-    background-repeat: no-repeat;
+  
     transition: 0.3s ease-in-out 0s;
 
 }
@@ -64,17 +67,21 @@
     display: flex;
 }
 
-.team-social img{
-    height: 30px;
+/* .team-social img{
+    height: 20px;
     transition: .2s ease-in-out 0s;  
-}
+} */
 .team-social a{
     margin: 10px;
     
 }
 
+.team-social-icon{
+    color: #000;
+}
+
 .team-social a:hover img{
-    height: 35px;
+    fill: #a5a2a2!important;
   
 }
 
