--- a/resources/style.css
+++ b/resources/style.css
@@ -34,7 +34,9 @@ body{
 
 /* Style the search box */
 #mySearch {
-  margin-top: 10px;
+  margin: 10px 0;
+  padding: 10px;
+  width: 30%;
 }
   
   /* Style the navigation menu */
