--- a/CSS/app.css
+++ b/CSS/app.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 @import './about.css';
+@import './accordion.css';
 @import './arrow.css';
 @import './back-images.css';
 @import './career-update.css';
