--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -21,7 +21,16 @@
 }
 .apply-now{
     height: 70%;
-    width: 100%;
+  width: 80%;    /* 100% */
+
+}
+
+.apply-now p{
+    padding: 0 20px 0 0;
+}
+
+.website-poster{
+    height: 100%;
 }
 
 .bg-active{
@@ -184,9 +193,23 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-direction: column;
+        overflow-y: scroll;
         padding: 10px;
         margin: 0px 0;
     }
+
+    .apply-now p{
+        margin-top: auto;
+       padding: 0 0 30px 0;
+    }
+
+    .website-poster{
+        height: 85%;
+        margin-bottom: -85%;
+    }
+
+
     .proceed-btn{
         margin: 5px 0px 0 0;
     }
